--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=Dark Oak Lectern
 tile.ebwizardry\:receptacle.name=Receptacle
 tile.ebwizardry\:imbuement_altar.name=Imbuement Altar
 
-item.ebwizardry\:crystal_magic.name=Magic Crystal
-item.ebwizardry\:crystal_magic.desc=The iridescent colours of this crystal seem to slowly shift and swirl, hinting at a magical energy within. Perhaps this magic could be harnessed in some way?
-item.ebwizardry\:crystal_fire.name=Fiery Crystal
-item.ebwizardry\:crystal_fire.desc=A crystal that glows a fiery orange. Maybe it is the key to unlocking the element of fire...
-item.ebwizardry\:crystal_ice.name=Icy Crystal
-item.ebwizardry\:crystal_ice.desc=A crystal with a cold, bluish tint. Perhaps it holds the secrets to the power of frost...
-item.ebwizardry\:crystal_lightning.name=Stormy Crystal
-item.ebwizardry\:crystal_lightning.desc=A crystal that seems to swirl and flash with a chaotic energy. Maybe it hides a greater power within...
-item.ebwizardry\:crystal_necromancy.name=Dark Crystal
-item.ebwizardry\:crystal_necromancy.desc=A crystal with a deep, purplish appearance that seems to draw you in. Perhaps it is a gateway to something darker...
-item.ebwizardry\:crystal_earth.name=Verdant Crystal
-item.ebwizardry\:crystal_earth.desc=A crystal patterened with a great many greens and browns. Perhaps it holds a connection to the forces of nature...
-item.ebwizardry\:crystal_sorcery.name=Mystical Crystal
-item.ebwizardry\:crystal_sorcery.desc=A crystal that glimmers with a bluish-green light. Maybe it conceals the secrets of an ancient force...
-item.ebwizardry\:crystal_healing.name=Radiant Crystal
-item.ebwizardry\:crystal_healing.desc=A crystal that glints a golden yellow in the sunlight. Perhaps it possesses the link to a divine power...
+item.ebwizardry\:magic_crystal.name=Magic Crystal
+item.ebwizardry\:magic_crystal.desc=The iridescent colours of this crystal seem to slowly shift and swirl, hinting at a magical energy within. Perhaps this magic could be harnessed in some way?
+item.ebwizardry\:fire_crystal.name=Fiery Crystal
+item.ebwizardry\:fire_crystal.desc=A crystal that glows a fiery orange. Maybe it is the key to unlocking the element of fire...
+item.ebwizardry\:ice_crystal.name=Icy Crystal
+item.ebwizardry\:ice_crystal.desc=A crystal with a cold, bluish tint. Perhaps it holds the secrets to the power of frost...
+item.ebwizardry\:lightning_crystal.name=Stormy Crystal
+item.ebwizardry\:lightning_crystal.desc=A crystal that seems to swirl and flash with a chaotic energy. Maybe it hides a greater power within...
+item.ebwizardry\:necromancy_crystal.name=Dark Crystal
+item.ebwizardry\:necromancy_crystal.desc=A crystal with a deep, purplish appearance that seems to draw you in. Perhaps it is a gateway to something darker...
+item.ebwizardry\:earth_crystal.name=Verdant Crystal
+item.ebwizardry\:earth_crystal.desc=A crystal patterened with a great many greens and browns. Perhaps it holds a connection to the forces of nature...
+item.ebwizardry\:sorcery_crystal.name=Mystical Crystal
+item.ebwizardry\:sorcery_crystal.desc=A crystal that glimmers with a bluish-green light. Maybe it conceals the secrets of an ancient force...
+item.ebwizardry\:healing_crystal.name=Radiant Crystal
+item.ebwizardry\:healing_crystal.desc=A crystal that glints a golden yellow in the sunlight. Perhaps it possesses the link to a divine power...
 
 item.ebwizardry\:spell_book.name=Spell Book
 item.ebwizardry\:spell_book.desc=A book filled with the runes and glyphs of an ancient script. Perhaps with dedication, one might be able to decipher its contents...\n\nRight-click while holding this book to read it.
