--- a/src/main/resources/assets/ebwizardry/lang/fr_fr.lang
+++ b/src/main/resources/assets/ebwizardry/lang/fr_fr.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=Lutrin de chêne noir
 tile.ebwizardry\:receptacle.name=Receptacle
 tile.ebwizardry\:imbuement_altar.name=Autel d'infusion
 
-item.ebwizardry\:crystal_magic.name=Cristal magique
-item.ebwizardry\:crystal_magic.desc=Les couleurs iridescentes du cristal tourbillonnent doucement, révélant sa magie. Il y a sûrement un moyen de l'utiliser...
-item.ebwizardry\:crystal_fire.name=Cristal embrasé
-item.ebwizardry\:crystal_fire.desc=Un cristal brillant d'un orange chatoyant. C'est sûrement la clef pour déverrouiller l'élément du feu...
-item.ebwizardry\:crystal_ice.name=Cristal gelé
-item.ebwizardry\:crystal_ice.desc=Un cristal teinté d'un bleu glacial. Il renferme sûrement les secrets du froid...
-item.ebwizardry\:crystal_lightning.name=Cristal foudroyant
-item.ebwizardry\:crystal_lightning.desc=Un cristal vibrant d'une énergie chaotique. Il cache probablement un pouvoir grandiose...
-item.ebwizardry\:crystal_necromancy.name=Cristal ténébreux
-item.ebwizardry\:crystal_necromancy.desc=Un cristal sombre et violacé. Il s'agit sûrement d'une clef pour un sombre pouvoir...
-item.ebwizardry\:crystal_earth.name=Cristal verdoyant
-item.ebwizardry\:crystal_earth.desc=Un cristal empreint de filaments verdoyants. Il doit sûrement contenir les pouvoirs de la nature...
-item.ebwizardry\:crystal_sorcery.name=Cristal mystique
-item.ebwizardry\:crystal_sorcery.desc=Un cristal luisant d'un vert bleuté. Il semble recéler une magie antique...
-item.ebwizardry\:crystal_healing.name=Cristal rayonnant
-item.ebwizardry\:crystal_healing.desc=Un cristal au rayonnement doré. Il doit être lié à un pouvoir divin...
+item.ebwizardry\:magic_crystal.name=Cristal magique
+item.ebwizardry\:magic_crystal.desc=Les couleurs iridescentes du cristal tourbillonnent doucement, révélant sa magie. Il y a sûrement un moyen de l'utiliser...
+item.ebwizardry\:fire_crystal.name=Cristal embrasé
+item.ebwizardry\:fire_crystal.desc=Un cristal brillant d'un orange chatoyant. C'est sûrement la clef pour déverrouiller l'élément du feu...
+item.ebwizardry\:ice_crystal.name=Cristal gelé
+item.ebwizardry\:ice_crystal.desc=Un cristal teinté d'un bleu glacial. Il renferme sûrement les secrets du froid...
+item.ebwizardry\:lightning_crystal.name=Cristal foudroyant
+item.ebwizardry\:lightning_crystal.desc=Un cristal vibrant d'une énergie chaotique. Il cache probablement un pouvoir grandiose...
+item.ebwizardry\:necromancy_crystal.name=Cristal ténébreux
+item.ebwizardry\:necromancy_crystal.desc=Un cristal sombre et violacé. Il s'agit sûrement d'une clef pour un sombre pouvoir...
+item.ebwizardry\:earth_crystal.name=Cristal verdoyant
+item.ebwizardry\:earth_crystal.desc=Un cristal empreint de filaments verdoyants. Il doit sûrement contenir les pouvoirs de la nature...
+item.ebwizardry\:sorcery_crystal.name=Cristal mystique
+item.ebwizardry\:sorcery_crystal.desc=Un cristal luisant d'un vert bleuté. Il semble recéler une magie antique...
+item.ebwizardry\:healing_crystal.name=Cristal rayonnant
+item.ebwizardry\:healing_crystal.desc=Un cristal au rayonnement doré. Il doit être lié à un pouvoir divin...
 
 item.ebwizardry\:spell_book.name=Livre de sorts
 item.ebwizardry\:spell_book.desc=Un livre rempli de glyphes et de runes antiques. Avec de l'agnégation, il devrait être possible de le décrypter...\n\nClic droit en tenant le livre pour le lire.
