--- a/src/main/resources/assets/ebwizardry/lang/hu_hu.lang
+++ b/src/main/resources/assets/ebwizardry/lang/hu_hu.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=Sötéttölgy Olvasóállvány
 tile.ebwizardry\:receptacle.name=Receptákulum
 tile.ebwizardry\:imbuement_altar.name=Oltár
 
-item.ebwizardry\:crystal_magic.name=Varázskristály
-item.ebwizardry\:crystal_magic.desc=A kristály belsejében lassan kavargó, irizáló színek mágikus energiáról tanúskodnak. Ezt az energiát ha ki lehetne nyerni, valahogy...
-item.ebwizardry\:crystal_fire.name=Tüzes Kristály
-item.ebwizardry\:crystal_fire.desc=Tüzes narancsszínnel izzó kristály. Ez lehet a kulcs a tűz elem titkainak feltárásához...
-item.ebwizardry\:crystal_ice.name=Jeges Kristály
-item.ebwizardry\:crystal_ice.desc=Hideg, kékes árnyalatú kristály. A fagy erejének titkait rejtheti...
-item.ebwizardry\:crystal_lightning.name=Viharos Kristály
-item.ebwizardry\:crystal_lightning.desc=Gomolygó és kaotikus energiával villogó kristály. Hatalmas erőt rejthet magában...
-item.ebwizardry\:crystal_necromancy.name=Sötét Kristály
-item.ebwizardry\:crystal_necromancy.desc=Mélységes lila kristály, mely ha ránézel szinte magába szippant. Valami még sötétebb kapuja lehet...
-item.ebwizardry\:crystal_earth.name=Viruló Kristály
-item.ebwizardry\:crystal_earth.desc=Zöld és barna temérdek árnyalatával mintázott kristály. Kapcsolata lehet a természet erőivel...
-item.ebwizardry\:crystal_sorcery.name=Misztikus Kristály
-item.ebwizardry\:crystal_sorcery.desc=Kékeszöld fénnyel csillogó kristály. Ősi erők titkait rejtheti magában...
-item.ebwizardry\:crystal_healing.name=Sugárzó Kristály
-item.ebwizardry\:crystal_healing.desc=A napsugárban aranyszín sárgán megcsillanó kristály. Tán isteni hatalomhoz rejt kapcsot...
+item.ebwizardry\:magic_crystal.name=Varázskristály
+item.ebwizardry\:magic_crystal.desc=A kristály belsejében lassan kavargó, irizáló színek mágikus energiáról tanúskodnak. Ezt az energiát ha ki lehetne nyerni, valahogy...
+item.ebwizardry\:fire_crystal.name=Tüzes Kristály
+item.ebwizardry\:fire_crystal.desc=Tüzes narancsszínnel izzó kristály. Ez lehet a kulcs a tűz elem titkainak feltárásához...
+item.ebwizardry\:ice_crystal.name=Jeges Kristály
+item.ebwizardry\:ice_crystal.desc=Hideg, kékes árnyalatú kristály. A fagy erejének titkait rejtheti...
+item.ebwizardry\:lightning_crystal.name=Viharos Kristály
+item.ebwizardry\:lightning_crystal.desc=Gomolygó és kaotikus energiával villogó kristály. Hatalmas erőt rejthet magában...
+item.ebwizardry\:necromancy_crystal.name=Sötét Kristály
+item.ebwizardry\:necromancy_crystal.desc=Mélységes lila kristály, mely ha ránézel szinte magába szippant. Valami még sötétebb kapuja lehet...
+item.ebwizardry\:earth_crystal.name=Viruló Kristály
+item.ebwizardry\:earth_crystal.desc=Zöld és barna temérdek árnyalatával mintázott kristály. Kapcsolata lehet a természet erőivel...
+item.ebwizardry\:sorcery_crystal.name=Misztikus Kristály
+item.ebwizardry\:sorcery_crystal.desc=Kékeszöld fénnyel csillogó kristály. Ősi erők titkait rejtheti magában...
+item.ebwizardry\:healing_crystal.name=Sugárzó Kristály
+item.ebwizardry\:healing_crystal.desc=A napsugárban aranyszín sárgán megcsillanó kristály. Tán isteni hatalomhoz rejt kapcsot...
 
 item.ebwizardry\:spell_book.name=Varázskönyv
 item.ebwizardry\:spell_book.desc=Egy könyv, egy ősi nyelv rúnáival és szimbólumaival tele. Elegendő eltökéltséggel talán meg lehetne fejteni tartalmát...\n\nJobb-kattintással nyisd meg a könyvet, hogy elolvashasd.
