--- a/src/main/resources/assets/ebwizardry/lang/ko_kr.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ko_kr.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=짙은 참나무 독서대
 tile.ebwizardry\:receptacle.name=받침
 tile.ebwizardry\:imbuement_altar.name=고취의 제단
 
-item.ebwizardry\:crystal_magic.name=마법수정
-item.ebwizardry\:crystal_magic.desc=무지갯빛의 아름다운 수정, 마법의 기운이 내부에서 서서히 변화하며 소용돌이치고 있습니다. 어쩌면 이 수정은 사용하면...
-item.ebwizardry\:crystal_fire.name=화염의 수정
-item.ebwizardry\:crystal_fire.desc=주황빛으로 불타는 수정, 어쩌면 불의 원소를 푸는 열쇠일지도 모릅니다...
-item.ebwizardry\:crystal_ice.name=얼음의 수정
-item.ebwizardry\:crystal_ice.desc=푸르스름한 색조의 차가운 수정, 어쩌면 서리의 힘의 비밀을 간직하고 있을지도 모릅니다...
-item.ebwizardry\:crystal_lightning.name=폭풍의 수정
-item.ebwizardry\:crystal_lightning.desc=어지럽게 소용돌이치고 번쩍이는 수정, 어쩌면 더 큰 힘을 숨기고 있을지도 모릅니다...
-item.ebwizardry\:crystal_necromancy.name=어둠의 수정
-item.ebwizardry\:crystal_necromancy.desc=마치 끌어당기는 듯한 깊고 푸르스름한 수정, 어쩌면 더 어두운 곳으로 가는 관문일지도 모릅니다...
-item.ebwizardry\:crystal_earth.name=신록의 수정
-item.ebwizardry\:crystal_earth.desc=녹색과 약간의 갈색으로 이루어진 수정, 어쩌면 자연의 힘과 연관이 있을지도 모릅니다...
-item.ebwizardry\:crystal_sorcery.name=신령의 수정
-item.ebwizardry\:crystal_sorcery.desc=푸르스름한 초록빛의 반짝거리는 수정, 어쩌면 고대의 힘의 비밀을 감추고 있을지도 모릅니다...
-item.ebwizardry\:crystal_healing.name=복사의 수정
-item.ebwizardry\:crystal_healing.desc=금빛 햇살처럼 노랗게 반짝이는 수정, 어쩌면 신성한 힘의 연결고리일지도 모릅니다...
+item.ebwizardry\:magic_crystal.name=마법수정
+item.ebwizardry\:magic_crystal.desc=무지갯빛의 아름다운 수정, 마법의 기운이 내부에서 서서히 변화하며 소용돌이치고 있습니다. 어쩌면 이 수정은 사용하면...
+item.ebwizardry\:fire_crystal.name=화염의 수정
+item.ebwizardry\:fire_crystal.desc=주황빛으로 불타는 수정, 어쩌면 불의 원소를 푸는 열쇠일지도 모릅니다...
+item.ebwizardry\:ice_crystal.name=얼음의 수정
+item.ebwizardry\:ice_crystal.desc=푸르스름한 색조의 차가운 수정, 어쩌면 서리의 힘의 비밀을 간직하고 있을지도 모릅니다...
+item.ebwizardry\:lightning_crystal.name=폭풍의 수정
+item.ebwizardry\:lightning_crystal.desc=어지럽게 소용돌이치고 번쩍이는 수정, 어쩌면 더 큰 힘을 숨기고 있을지도 모릅니다...
+item.ebwizardry\:necromancy_crystal.name=어둠의 수정
+item.ebwizardry\:necromancy_crystal.desc=마치 끌어당기는 듯한 깊고 푸르스름한 수정, 어쩌면 더 어두운 곳으로 가는 관문일지도 모릅니다...
+item.ebwizardry\:earth_crystal.name=신록의 수정
+item.ebwizardry\:earth_crystal.desc=녹색과 약간의 갈색으로 이루어진 수정, 어쩌면 자연의 힘과 연관이 있을지도 모릅니다...
+item.ebwizardry\:sorcery_crystal.name=신령의 수정
+item.ebwizardry\:sorcery_crystal.desc=푸르스름한 초록빛의 반짝거리는 수정, 어쩌면 고대의 힘의 비밀을 감추고 있을지도 모릅니다...
+item.ebwizardry\:healing_crystal.name=복사의 수정
+item.ebwizardry\:healing_crystal.desc=금빛 햇살처럼 노랗게 반짝이는 수정, 어쩌면 신성한 힘의 연결고리일지도 모릅니다...
 
 item.ebwizardry\:spell_book.name=주문서
 item.ebwizardry\:spell_book.desc=고대의 상형문자와 룬 문자로 채워진 책. 노력을 통해 그 내용을 해독할 수 있을 것 같습니다...\n\n책을 읽으려면 오른쪽 버튼을 누르세요.
