--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=Кафедра из тёмного дуб
 tile.ebwizardry\:receptacle.name=Вместилище
 tile.ebwizardry\:imbuement_altar.name=Алтарь наполнения
 
-item.ebwizardry\:crystal_magic.name=Волшебный кристалл
-item.ebwizardry\:crystal_magic.desc=Переливающиеся цвета этого кристалла, кажется, медленно меняются и кружатся, намекая на волшебную энергию внутри. Возможно, эту магию можно задействовать, как-нибудь...
-item.ebwizardry\:crystal_fire.name=Огненный кристалл
-item.ebwizardry\:crystal_fire.desc=Кристалл, который светится оранжево-огненным цветом. Возможно, он - ключ к разблокировки элемента огня...
-item.ebwizardry\:crystal_ice.name=Ледяной кристалл
-item.ebwizardry\:crystal_ice.desc=Кристалл с холодным, синим оттенком. Вероятно, он хранит в себе тайны силы мороза...
-item.ebwizardry\:crystal_lightning.name=Грозовой кристалл
-item.ebwizardry\:crystal_lightning.desc=Кристалл, который, кажется, вращается и вспыхивает с хаотической энергией. Может быть, он скрывает большую силу внутри...
-item.ebwizardry\:crystal_necromancy.name=Тёмный кристалл
-item.ebwizardry\:crystal_necromancy.desc=Кристалл с глубоким, пурпурным внешним видом, который, по-видимому, привлекает Вас. Вероятно, это врата к чему-то более тёмному...
-item.ebwizardry\:crystal_earth.name=Зелёный кристалл
-item.ebwizardry\:crystal_earth.desc=Узорчатый кристалл, со множеством оттенками зелёного и коричневого. Возможно, он держит связь с силами природы...
-item.ebwizardry\:crystal_sorcery.name=Мистический кристалл
-item.ebwizardry\:crystal_sorcery.desc=Кристалл, который мерцает голубовато-зелёным светом. Возможно, он таит в себе тайны древней силы...
-item.ebwizardry\:crystal_healing.name=Сияющий кристалл
-item.ebwizardry\:crystal_healing.desc=Кристалл, который блестит золотистым жёлтым светом в дневном свете. Наверное, он владеет связь с божественной силой...
+item.ebwizardry\:magic_crystal.name=Волшебный кристалл
+item.ebwizardry\:magic_crystal.desc=Переливающиеся цвета этого кристалла, кажется, медленно меняются и кружатся, намекая на волшебную энергию внутри. Возможно, эту магию можно задействовать, как-нибудь...
+item.ebwizardry\:fire_crystal.name=Огненный кристалл
+item.ebwizardry\:fire_crystal.desc=Кристалл, который светится оранжево-огненным цветом. Возможно, он - ключ к разблокировки элемента огня...
+item.ebwizardry\:ice_crystal.name=Ледяной кристалл
+item.ebwizardry\:ice_crystal.desc=Кристалл с холодным, синим оттенком. Вероятно, он хранит в себе тайны силы мороза...
+item.ebwizardry\:lightning_crystal.name=Грозовой кристалл
+item.ebwizardry\:lightning_crystal.desc=Кристалл, который, кажется, вращается и вспыхивает с хаотической энергией. Может быть, он скрывает большую силу внутри...
+item.ebwizardry\:necromancy_crystal.name=Тёмный кристалл
+item.ebwizardry\:necromancy_crystal.desc=Кристалл с глубоким, пурпурным внешним видом, который, по-видимому, привлекает Вас. Вероятно, это врата к чему-то более тёмному...
+item.ebwizardry\:earth_crystal.name=Зелёный кристалл
+item.ebwizardry\:earth_crystal.desc=Узорчатый кристалл, со множеством оттенками зелёного и коричневого. Возможно, он держит связь с силами природы...
+item.ebwizardry\:sorcery_crystal.name=Мистический кристалл
+item.ebwizardry\:sorcery_crystal.desc=Кристалл, который мерцает голубовато-зелёным светом. Возможно, он таит в себе тайны древней силы...
+item.ebwizardry\:healing_crystal.name=Сияющий кристалл
+item.ebwizardry\:healing_crystal.desc=Кристалл, который блестит золотистым жёлтым светом в дневном свете. Наверное, он владеет связь с божественной силой...
 
 item.ebwizardry\:spell_book.name=Книга с заклинанием
 item.ebwizardry\:spell_book.desc=Книга наполненная рунами и символами древней рукописи. Возможно, с самоотверженностью можно расшифровать её содержание...\n\nНажмите пкм, пока держите эту книгу, чтобы прочитать её.
