--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -52,22 +52,22 @@ tile.ebwizardry\:dark_oak_lectern.name=深色橡木览术台
 tile.ebwizardry\:receptacle.name=容杯
 tile.ebwizardry\:imbuement_altar.name=注灵祭坛
 
-item.ebwizardry\:crystal_magic.name=魔力水晶
-item.ebwizardry\:crystal_magic.desc=水晶闪耀斑斓的色彩似乎在缓慢地变幻流转，暗示着其内蕴含的魔法能量。或许能以某种方法来驾驭这种魔力......
-item.ebwizardry\:crystal_fire.name=赤焰水晶
-item.ebwizardry\:crystal_fire.desc=发出烈火般橙色光彩的水晶。也许是揭示火焰元素奥秘的关键......
-item.ebwizardry\:crystal_ice.name=寒霜水晶
-item.ebwizardry\:crystal_ice.desc=具有寒冷的霜蓝色调的水晶。或许它蕴藏着冰霜力量的奥秘......
-item.ebwizardry\:crystal_lightning.name=风暴水晶
-item.ebwizardry\:crystal_lightning.desc=似乎有混沌能量在其中流转闪烁的水晶。也许它内部蕴藏着更强大的力量......
-item.ebwizardry\:crystal_necromancy.name=邃暗水晶
-item.ebwizardry\:crystal_necromancy.desc=暗紫色外观的水晶，凝视它时仿佛被吸入其中。或许它是通往邃暗的门户......
-item.ebwizardry\:crystal_earth.name=苍翠水晶
-item.ebwizardry\:crystal_earth.desc=遍布翠绿与褐色图案的水晶。或许它蕴含着与自然之力的联系......
-item.ebwizardry\:crystal_sorcery.name=秘源水晶
-item.ebwizardry\:crystal_sorcery.desc=散发着碧绿微光的水晶。也许它封存着远古之力的奥秘......
-item.ebwizardry\:crystal_healing.name=光辉水晶
-item.ebwizardry\:crystal_healing.desc=在日光下闪耀金黄色光芒的水晶。或许它连结着神圣之力......
+item.ebwizardry\:magic_crystal.name=魔力水晶
+item.ebwizardry\:magic_crystal.desc=水晶闪耀斑斓的色彩似乎在缓慢地变幻流转，暗示着其内蕴含的魔法能量。或许能以某种方法来驾驭这种魔力......
+item.ebwizardry\:fire_crystal.name=赤焰水晶
+item.ebwizardry\:fire_crystal.desc=发出烈火般橙色光彩的水晶。也许是揭示火焰元素奥秘的关键......
+item.ebwizardry\:ice_crystal.name=寒霜水晶
+item.ebwizardry\:ice_crystal.desc=具有寒冷的霜蓝色调的水晶。或许它蕴藏着冰霜力量的奥秘......
+item.ebwizardry\:lightning_crystal.name=风暴水晶
+item.ebwizardry\:lightning_crystal.desc=似乎有混沌能量在其中流转闪烁的水晶。也许它内部蕴藏着更强大的力量......
+item.ebwizardry\:necromancy_crystal.name=邃暗水晶
+item.ebwizardry\:necromancy_crystal.desc=暗紫色外观的水晶，凝视它时仿佛被吸入其中。或许它是通往邃暗的门户......
+item.ebwizardry\:earth_crystal.name=苍翠水晶
+item.ebwizardry\:earth_crystal.desc=遍布翠绿与褐色图案的水晶。或许它蕴含着与自然之力的联系......
+item.ebwizardry\:sorcery_crystal.name=秘源水晶
+item.ebwizardry\:sorcery_crystal.desc=散发着碧绿微光的水晶。也许它封存着远古之力的奥秘......
+item.ebwizardry\:healing_crystal.name=光辉水晶
+item.ebwizardry\:healing_crystal.desc=在日光下闪耀金黄色光芒的水晶。或许它连结着神圣之力......
 
 item.ebwizardry\:spell_book.name=法术书
 item.ebwizardry\:spell_book.desc=一本写满了远古文稿里符号与雕文的书。通过刻苦钻研，或许能破译它的内容......\n\n手持这本书时右击即可阅读。
