refactor: Flattened the runestone blocks

--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=你记住了位于 %4$s 维度 %1
 tile.ebwizardry\:transportation_stone.forget=你遗忘了位于 %4$s 维度 %1$s，%2$s，%3$s的传送坐标
 tile.ebwizardry\:transportation_stone.invalid=你必须用8个传送石围成一个圈！
 tile.ebwizardry\:spectral_block.name=幽冥方块
-tile.ebwizardry\:runestone.name=符石
-tile.ebwizardry\:runestone_pedestal.name=符石基座
+tile.ebwizardry\:fire_runestone.name=符石
+tile.ebwizardry\:ice_runestone.name=符石
+tile.ebwizardry\:lightning_runestone.name=符石
+tile.ebwizardry\:necromancy_runestone.name=符石
+tile.ebwizardry\:earth_runestone.name=符石
+tile.ebwizardry\:healing_runestone.name=符石
+tile.ebwizardry\:sorcery_runestone.name=符石
+tile.ebwizardry\:fire_runestone_pedestal.name=符石基座
+tile.ebwizardry\:ice_runestone_pedestal.name=符石基座
+tile.ebwizardry\:lightning_runestone_pedestal.name=符石基座
+tile.ebwizardry\:necromancy_runestone_pedestal.name=符石基座
+tile.ebwizardry\:earth_runestone_pedestal.name=符石基座
+tile.ebwizardry\:healing_runestone_pedestal.name=符石基座
+tile.ebwizardry\:sorcery_runestone_pedestal.name=符石基座
 tile.ebwizardry\:thorns.name=荆棘
 tile.ebwizardry\:obsidian_crust.name=黑曜石层
 tile.ebwizardry\:dry_frosted_ice.name=干燥霜冰
