--- a/src/main/resources/assets/ebwizardry/lang/de_de.lang
+++ b/src/main/resources/assets/ebwizardry/lang/de_de.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=Position %s, %s, %s in der dimens
 tile.ebwizardry\:transportation_stone.forget=Position %s, %s, %s in der dimension %s vergessen
 tile.ebwizardry\:transportation_stone.invalid=Du musst zuerst einen Kreis mit 8 Teleportsteinen bilden!
 tile.ebwizardry\:spectral_block.name=Spektralblock
-tile.ebwizardry\:runestone.name=Runenstein
-tile.ebwizardry\:runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:fire_runestone.name=Runenstein
+tile.ebwizardry\:ice_runestone.name=Runenstein
+tile.ebwizardry\:lightning_runestone.name=Runenstein
+tile.ebwizardry\:necromancy_runestone.name=Runenstein
+tile.ebwizardry\:earth_runestone.name=Runenstein
+tile.ebwizardry\:healing_runestone.name=Runenstein
+tile.ebwizardry\:sorcery_runestone.name=Runenstein
+tile.ebwizardry\:fire_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:ice_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:lightning_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:earth_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:healing_runestone_pedestal.name=Runenstein Sockel
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Runenstein Sockel
 tile.ebwizardry\:thorns.name=Dornen
 tile.ebwizardry\:obsidian_crust.name=Obsidian Kruste
 tile.ebwizardry\:dry_frosted_ice.name=Gefrohrenes Trockeneis
