--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=Remembered the location %s, %s, %
 tile.ebwizardry\:transportation_stone.forget=Forgot the location %s, %s, %s in dimension %s
 tile.ebwizardry\:transportation_stone.invalid=You must make a circle with 8 stones of transportation first!
 tile.ebwizardry\:spectral_block.name=Spectral Block
-tile.ebwizardry\:runestone.name=Runestone
-tile.ebwizardry\:runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:fire_runestone.name=Runestone
+tile.ebwizardry\:ice_runestone.name=Runestone
+tile.ebwizardry\:lightning_runestone.name=Runestone
+tile.ebwizardry\:necromancy_runestone.name=Runestone
+tile.ebwizardry\:earth_runestone.name=Runestone
+tile.ebwizardry\:healing_runestone.name=Runestone
+tile.ebwizardry\:sorcery_runestone.name=Runestone
+tile.ebwizardry\:fire_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:ice_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:lightning_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:earth_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:healing_runestone_pedestal.name=Runestone Pedestal
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Runestone Pedestal
 tile.ebwizardry\:thorns.name=Thorns
 tile.ebwizardry\:obsidian_crust.name=Obsidian Crust
 tile.ebwizardry\:dry_frosted_ice.name=Dry Frosted Ice
