--- a/src/main/resources/assets/ebwizardry/lang/fr_fr.lang
+++ b/src/main/resources/assets/ebwizardry/lang/fr_fr.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=La position %s, %s, %s a été ma
 tile.ebwizardry\:transportation_stone.forget=La position %s, %s, %s a été effacée dans la dimension %s
 tile.ebwizardry\:transportation_stone.invalid=Vous devez d'abord créer un cercle avec 8 pierres de téléportation!
 tile.ebwizardry\:spectral_block.name=Bloc spectral
-tile.ebwizardry\:runestone.name=Pierre runique
-tile.ebwizardry\:runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:fire_runestone.name=Pierre runique
+tile.ebwizardry\:ice_runestone.name=Pierre runique
+tile.ebwizardry\:lightning_runestone.name=Pierre runique
+tile.ebwizardry\:necromancy_runestone.name=Pierre runique
+tile.ebwizardry\:earth_runestone.name=Pierre runique
+tile.ebwizardry\:healing_runestone.name=Pierre runique
+tile.ebwizardry\:sorcery_runestone.name=Pierre runique
+tile.ebwizardry\:fire_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:ice_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:lightning_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:earth_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:healing_runestone_pedestal.name=Piédestal runique
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Piédestal runique
 tile.ebwizardry\:thorns.name=Épines
 tile.ebwizardry\:obsidian_crust.name=Croûte d'obsidienne
 tile.ebwizardry\:dry_frosted_ice.name=Glace dépolie
