--- a/src/main/resources/assets/ebwizardry/lang/hu_hu.lang
+++ b/src/main/resources/assets/ebwizardry/lang/hu_hu.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=egjegyezve a hely: %s, %s, %s, %s
 tile.ebwizardry\:transportation_stone.forget=Elfelejtve a hely: %s, %s, %s, %s dimenzióban
 tile.ebwizardry\:transportation_stone.invalid=Előbb egy kört kell építened 8 Transzportáció Kövéből!
 tile.ebwizardry\:spectral_block.name=Spektrálblokk
-tile.ebwizardry\:runestone.name=Rúnakő
-tile.ebwizardry\:runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:fire_runestone.name=Rúnakő
+tile.ebwizardry\:ice_runestone.name=Rúnakő
+tile.ebwizardry\:lightning_runestone.name=Rúnakő
+tile.ebwizardry\:necromancy_runestone.name=Rúnakő
+tile.ebwizardry\:earth_runestone.name=Rúnakő
+tile.ebwizardry\:healing_runestone.name=Rúnakő
+tile.ebwizardry\:sorcery_runestone.name=Rúnakő
+tile.ebwizardry\:fire_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:ice_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:lightning_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:earth_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:healing_runestone_pedestal.name=Rúnakő Pedesztál
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Rúnakő Pedesztál
 tile.ebwizardry\:thorns.name=Tövisek
 tile.ebwizardry\:obsidian_crust.name=Obszidián Kéreg
 tile.ebwizardry\:dry_frosted_ice.name=Száraz Fagyott Jég
