--- a/src/main/resources/assets/ebwizardry/lang/ko_kr.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ko_kr.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=%s, %s, %s의 %s의 위치를 지
 tile.ebwizardry\:transportation_stone.forget=%s, %s, %s의 %s의 위치를 지웠습니다
 tile.ebwizardry\:transportation_stone.invalid=먼저 전이의 돌 8개로 전이진을 만들어야 합니다!
 tile.ebwizardry\:spectral_block.name=허상 블록
-tile.ebwizardry\:runestone.name=룬스톤
-tile.ebwizardry\:runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:fire_runestone.name=룬스톤
+tile.ebwizardry\:ice_runestone.name=룬스톤
+tile.ebwizardry\:lightning_runestone.name=룬스톤
+tile.ebwizardry\:necromancy_runestone.name=룬스톤
+tile.ebwizardry\:earth_runestone.name=룬스톤
+tile.ebwizardry\:healing_runestone.name=룬스톤
+tile.ebwizardry\:sorcery_runestone.name=룬스톤
+tile.ebwizardry\:fire_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:ice_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:lightning_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:necromancy_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:earth_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:healing_runestone_pedestal.name=룬스톤 초석
+tile.ebwizardry\:sorcery_runestone_pedestal.name=룬스톤 초석
 tile.ebwizardry\:thorns.name=가시
 tile.ebwizardry\:obsidian_crust.name=흑요석 껍질
 tile.ebwizardry\:dry_frosted_ice.name=마른 반투명 얼음
