--- a/src/main/resources/assets/ebwizardry/lang/pl_pl.lang
+++ b/src/main/resources/assets/ebwizardry/lang/pl_pl.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=Zapamiętano lokalizację %s, %s,
 tile.ebwizardry\:transportation_stone.forget=Zapomniano lokalizację %s, %s, %s w wymiarze %s
 tile.ebwizardry\:transportation_stone.invalid=Najpierw musisz zrobić krąg z 8 kamieniami transportu!
 tile.ebwizardry\:spectral_block.name=Blok Spektralny
-tile.ebwizardry\:runestone.name=Kamień Runiczny
-tile.ebwizardry\:runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:fire_runestone.name=Kamień Runiczny
+tile.ebwizardry\:ice_runestone.name=Kamień Runiczny
+tile.ebwizardry\:lightning_runestone.name=Kamień Runiczny
+tile.ebwizardry\:necromancy_runestone.name=Kamień Runiczny
+tile.ebwizardry\:earth_runestone.name=Kamień Runiczny
+tile.ebwizardry\:healing_runestone.name=Kamień Runiczny
+tile.ebwizardry\:sorcery_runestone.name=Kamień Runiczny
+tile.ebwizardry\:fire_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:ice_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:lightning_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:earth_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:healing_runestone_pedestal.name=Pilar Runicznego Kamienia
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Pilar Runicznego Kamienia
 tile.ebwizardry\:thorns.name=Ciernie
 tile.ebwizardry\:obsidian_crust.name=Obsydianowa Skorupa
 tile.ebwizardry\:dry_frosted_ice.name=Zaschły Lód
