--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=Запомнил местопол
 tile.ebwizardry\:transportation_stone.forget=Забыл местоположение %s, %s, %s в измерении %s
 tile.ebwizardry\:transportation_stone.invalid=Первое, что Вы должны сделать, это круг с 8-ю камнями перемещения!
 tile.ebwizardry\:spectral_block.name=Спектральный блок
-tile.ebwizardry\:runestone.name=Рунный камень
-tile.ebwizardry\:runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:fire_runestone.name=Рунный камень
+tile.ebwizardry\:ice_runestone.name=Рунный камень
+tile.ebwizardry\:lightning_runestone.name=Рунный камень
+tile.ebwizardry\:necromancy_runestone.name=Рунный камень
+tile.ebwizardry\:earth_runestone.name=Рунный камень
+tile.ebwizardry\:healing_runestone.name=Рунный камень
+tile.ebwizardry\:sorcery_runestone.name=Рунный камень
+tile.ebwizardry\:fire_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:ice_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:lightning_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:necromancy_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:earth_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:healing_runestone_pedestal.name=Пьедестал из рунного камня
+tile.ebwizardry\:sorcery_runestone_pedestal.name=Пьедестал из рунного камня
 tile.ebwizardry\:thorns.name=Шипы
 tile.ebwizardry\:obsidian_crust.name=Обсидиановая кора
 tile.ebwizardry\:dry_frosted_ice.name=Сухой матовый лёд
