--- a/src/main/resources/assets/ebwizardry/lang/zh_tw.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_tw.lang
@@ -11,8 +11,20 @@ tile.ebwizardry\:transportation_stone.remember=記憶座標位置 %s, %s, %s 於
 tile.ebwizardry\:transportation_stone.forget=消除記憶座標位置 %s, %s, %s 於世界: %s
 tile.ebwizardry\:transportation_stone.invalid=你必須先用8個傳送石圍成一圈！
 tile.ebwizardry\:spectral_block.name=具現化方塊
-tile.ebwizardry\:runestone.name=符文石
-tile.ebwizardry\:runestone_pedestal.name=符文石座
+tile.ebwizardry\:fire_runestone.name=符文石
+tile.ebwizardry\:ice_runestone.name=符文石
+tile.ebwizardry\:lightning_runestone.name=符文石
+tile.ebwizardry\:necromancy_runestone.name=符文石
+tile.ebwizardry\:earth_runestone.name=符文石
+tile.ebwizardry\:healing_runestone.name=符文石
+tile.ebwizardry\:sorcery_runestone.name=符文石
+tile.ebwizardry\:fire_runestone_pedestal.name=符文石座
+tile.ebwizardry\:ice_runestone_pedestal.name=符文石座
+tile.ebwizardry\:lightning_runestone_pedestal.name=符文石座
+tile.ebwizardry\:necromancy_runestone_pedestal.name=符文石座
+tile.ebwizardry\:earth_runestone_pedestal.name=符文石座
+tile.ebwizardry\:healing_runestone_pedestal.name=符文石座
+tile.ebwizardry\:sorcery_runestone_pedestal.name=符文石座
 tile.ebwizardry\:thorns.name=荊棘
 tile.ebwizardry\:obsidian_crust.name=黑曜石殼
 tile.ebwizardry\:dry_frosted_ice.name=乾的結凍冰
