feat: flattened the gilded wood blocks

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -31,7 +31,7 @@ tile.ebwizardry\:dry_frosted_ice.name=Dry Frosted Ice
 tile.ebwizardry\:crystal_flower_pot.name=Flower Pot
 tile.ebwizardry\:permafrost.name=Permafrost
 
-tile.ebwizardry\:magic_crystal_block.name=Block of Crystal
+tile.ebwizardry\:magic_crystal_block.name=Block of Magic Crystal
 tile.ebwizardry\:fire_crystal_block.name=Block of Fiery Crystal
 tile.ebwizardry\:ice_crystal_block.name=Block of Icy Crystal
 tile.ebwizardry\:lightning_crystal_block.name=Block of Stormy Crystal
