feat: Configuration options for the values of: POTENCY_INCREASE_PER_TIER, COOLDOWN_REDUCTION_PER_LEVEL, DURATION_INCREASE_PER_LEVEL, RANGE_INCREASE_PER_LEVEL, BLAST_RADIUS_INCREASE_PER_LEVEL, RANGE_INCREASE_PER_LEVEL

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -1532,6 +1532,18 @@ config.ebwizardry.bonemeal_grows_crystal_flowers=Bonemeal Grows Crystal Flowers
 config.ebwizardry.bonemeal_grows_crystal_flowers.tooltip=Whether using bonemeal on grass blocks has a chance to grow crystal flowers.
 config.ebwizardry.wands_must_be_held_to_decrement_cooldown=Wands Must Be Held To Decrement Cooldown
 config.ebwizardry.wands_must_be_held_to_decrement_cooldown.tooltip=Whether wands only decrement their cooldowns if a player holds them.
+config.ebwizardry.cooldown_reduction_per_level=Cooldown Reduction Per Level
+config.ebwizardry.cooldown_reduction_per_level.tooltip=The fraction by which cooldowns are reduced for each level of cooldown upgrade.
+config.ebwizardry.potency_increase_per_tier=Potency Increase Per Tier
+config.ebwizardry.potency_increase_per_tier.tooltip=The fraction by which potency is increased for each tier of matching wand. May cause extreme lag with high values!
+config.ebwizardry.duration_increase_per_level=Duration Increase Per Level
+config.ebwizardry.duration_increase_per_level.tooltip=The fraction by which spell duration is increased for each level of duration upgrade.
+config.ebwizardry.range_increase_per_level=Range Increase Per Level
+config.ebwizardry.range_increase_per_level.tooltip=The fraction by which spell range is increased for each level of range upgrade. May cause extreme lag with high values!
+config.ebwizardry.blast_increase_per_level=Blast Increase Per Level
+config.ebwizardry.blast_increase_per_level.tooltip=The fraction by which spell blast is increased for each level of blast upgrade. May cause extreme lag with high values!
+config.ebwizardry.frost_slowness_increase_per_level=Frost Slowness Increase Per Level
+config.ebwizardry.frost_slowness_increase_per_level.tooltip=The fraction by which movement speed is reduced per level of frost effect.
 
 config.ebwizardry.category.difficulty=Difficulty Settings
 config.ebwizardry.category.difficulty.tooltip=Configure wizardry's difficulty
